packages/web/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emberlog-web
  namespace: emberlog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emberlog-web
  template:
    metadata:
      labels:
        app: emberlog-web
    spec:
      containers:
        - name: emberlog-web
          image: ghcr.io/jcrawford2000/emberlog-web
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
